--- a/Parcial1/misestilos.css
+++ b/Parcial1/misestilos.css
@@ -17,3 +17,22 @@ span ul li{
     font-style: oblique;
     font-weight: 700;
 }
+#boton{
+    background-color: yellowgreen;
+    border: none;
+    font-size: 30px;
+    width: 500px;
+    padding: 20px;
+    color: gray;
+}
+.texto{
+    color: black;
+}
+
+.link{
+    color: gray;
+}
+
+a:hover{
+    color: coral;
+}
